2005-08-05  Alfred M. Szmidt  <ams@gnu.org>

	[BZ #1252]
	* sysdeps/mach/hurd/setitimer.c (restart_itimer): Move static fn
	forward decl out of function body.
	* sysdeps/mach/hurd/profil.c: Likewise.

2005-10-16  Roland McGrath  <roland@frob.com>

	[BZ #1254]
	* sysdeps/mach/hurd/getpeername.c (__getpeername): Respect *LEN
	byte limit when setting ADDR->sa_family.
	Reported by Samuel Thibault <samuel.thibault@ens-lyon.org>.

	[BZ #1253]
	* sysdeps/mach/hurd/dl-sysdep.h
	[SHARED] (DL_ARGV_NOT_RELRO): New macro.

	[BZ #1253]
	* sysdeps/mach/hurd/i386/init-first.c (init): Make cast kosher.
	(_hurd_stack_setup): Don't declare with arguments and ellipsis.
	Use __builtin_frame_address and __builtin_return_address.
	(_dl_init_first): Likewise.

	[BZ #1249]
	* sysdeps/mach/hurd/i386/init-first.c (_cthread_init_routine): Declare
	as weak extern.
	(init): Check for it being undefined.

2005-10-16  Daniel Jacobowitz  <dan@codesourcery.com>
	    Roland McGrath  <roland@redhat.com>

	* Makerules [module-names] (extra-modules-build): New variable.
	($(extra-modules-build:%=$(objpfx)%.so)): New static pattern rule.
	Depend on libc.so and libc_nonshared.a.
	* dlfcn/Makefile ($(test-modules)): Remove static pattern rule.
	* elf/Makefile (modules-names-nobuild): New variable, add filtmod1.
	($(test-modules)): Remove static pattern rule.

2005-10-15  Thomas Schwinge  <tschwinge@gnu.org>

	* include/dirent.h: Include <stdbool.h>.
	* sysdeps/mach/hurd/fdopendir.c: Include <fcntl.h>.
	(fdopendir): Correct argument to _hurd_fd_get().
	* sysdeps/mach/hurd/opendir.c (__opendir): Remove stray `}'.

2005-08-20  Paul Eggert  <eggert@cs.ucla.edu>

	[BZ #1224]
	* posix/regcomp.c (init_word_char, duplicate_node_closure,
	fetch_token, peek_token_bracket, build_range_exp,
	build_collating_symbol): Remove forward decls; no longer needed
	now that we use prototypes.

2005-10-15  Ulrich Drepper  <drepper@redhat.com>

	[BZ #1221]
	* posix/regex_internal.h: Remove last traces of